circbuf: Move the circular buffer code out of windows code
Put it into its own file so it can be used in other places.

Signed-off-by: Corey Minyard <cminyard@mvista.com>

--- a/include/gensio/Makefile.am
+++ b/include/gensio/Makefile.am
@@ -5,7 +5,7 @@ pkginclude_HEADERS = gensio.h gensio_class.h sergensio.h sergensio_class.h \
 	gensio_os_funcs.h gensio_err.h gensio_builtins.h gensio_osops.h \
 	gensio_list.h gensio_version.h gensio_dllvisibility.h \
 	gensio_deprecated.h gensio_mdns.h gensio_types.h \
-	gensio_osops_addrinfo.h gensio_osops_stdsock.h
+	gensio_osops_addrinfo.h gensio_osops_stdsock.h gensio_circbuf.h
 
 EXTRA_DIST = gensio_version.h.in CMakeLists.txt
 
