Add the new gensio_circbuf.c file to CMakeLists
It was missed when it was added earlier.

Signed-off-by: Corey Minyard <cminyard@mvista.com>

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -41,6 +41,7 @@ set(BASE_LIBFILES
   gensio_mdns.c
   gensio_stdio.c
   sergensio_serialdev.c
+  gensio_circbuf.c
   gensio_addrinfo.c
   gensio_stdsock.c
   uucplock.c
