Add a version compare macro for gensio versions
Make it easier to compare versions.

Signed-off-by: Corey Minyard <cminyard@mvista.com>

--- a/include/gensio/gensio_version.h.in
+++ b/include/gensio/gensio_version.h.in
@@ -13,4 +13,24 @@
 #define gensio_version_patch @gensio_VERSION_PATCH@
 #define gensio_version_string "@gensio_VERSION_STRING@"
 
+/*
+ * A macro to compare a gensio version, for handling new features.
+ */
+#define gensio_version_ge(maj, min, patch) \
+    ((gensio_version_major > (maj)) ||					\
+     (gensio_version_major == (maj) && gensio_version_minor > (min)) ||	\
+     (gensio_version_major == (maj) && gensio_version_minor == (min) &&	\
+      gensio_version_patch >= (patch)))
+
+/*
+ * A macro to compare a gensio version, for handling features being
+ * removed.
+ */
+#define gensio_version_lt(maj, min, patch) \
+    ((gensio_version_major < (maj)) ||					\
+     (gensio_version_major == (maj) && gensio_version_minor < (min)) ||	\
+     (gensio_version_major == (maj) && gensio_version_minor == (min) &&	\
+      gensio_version_patch < (patch)))
+
+
 #endif /* GENSIO_VERSION_H */
