glib: Add initial support
Add a glib os funcs and add support for it to gensiot and oomtest.

Signed-off-by: Corey Minyard <cminyard@mvista.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,7 @@ include(CheckIncludeFile)
 include(CheckSymbolExists)
 include(CheckCSourceCompiles)
 include(GNUInstallDirs)
+include(FindPkgConfig)
 
 if (WIN32)
   # Suppress packing error warnings, as they are ubiquitous and don't matter.
@@ -43,6 +44,15 @@ endif()
 option(ENABLE_EPOLL "Enable epoll support" ON)
 if(ENABLE_EPOLL)
   CHECK_INCLUDE_FILE(sys/epoll.h HAVE_EPOLL_PWAIT)
+endif()
+
+option(ENABLE_GLIB "Enable GLIB support" ON)
+if(ENABLE_GLIB)
+  pkg_check_modules(GLIB glib-2.0)
+  if(GLIB_FOUND)
+    set(HAVE_GLIB ON)
+    set(GLIB_LIB gensioglib)
+  endif()
 endif()
 
 option(ENABLE_OPENIPMI "Enable OpenIPMI serial over LAN support" ON)
@@ -165,6 +175,9 @@ endif()
 configure_file(config.h.cmake config.h)
 
 add_subdirectory(lib)
+if(GLIB_FOUND)
+  add_subdirectory(glib)
+endif()
 add_subdirectory(include)
 add_subdirectory(tools)
 add_subdirectory(examples)
