glib: Create a swig-based module for the OS handler
Allow python code to allocate a swig OS handler.

Signed-off-by: Corey Minyard <cminyard@mvista.com>

--- a/configure.ac
+++ b/configure.ac
@@ -538,6 +538,8 @@ AC_OUTPUT([Makefile
 	lib/Makefile
 	glib/libgensioglib.pc
 	glib/Makefile
+	glib/swig/Makefile
+	glib/swig/python/Makefile
 	include/Makefile
 	include/gensio/Makefile
 	include/gensio/gensio_version.h
