--- a/glib/CMakeLists.txt
+++ b/glib/CMakeLists.txt
@@ -26,7 +26,10 @@ target_include_directories(gensioglib
                             $<INSTALL_INTERFACE:include>
                            )
 target_include_directories(gensioglib PUBLIC ${GLIB_INCLUDE_DIRS})
-  
+
+if(SWIG_FOUND)
+  add_subdirectory(swig)
+endif()
 
 configure_file(libgensioglib.pc.in libgensioglib.pc @ONLY)
 install(FILES ${CMAKE_CURRENT_BINARY_DIR}/libgensioglib.pc
