--- a/tests/runtest.in
+++ b/tests/runtest.in
@@ -53,7 +53,7 @@ else
 fi
 
 if ${PYTHON_MODE}; then
-    export PYTHONPATH=${BUILDDIR}/swig/python:${BUILDDIR}/swig/python/.libs:${TEST_BUILDDIR}
+    export PYTHONPATH=${BUILDDIR}/swig/python:${BUILDDIR}/swig/python/.libs:${BUILDDIR}/glib/swig/python:${BUILDDIR}/glib/swig/python/.libs:${TEST_BUILDDIR}
     # We need to put the DLL in PATH for MSYS on Windows
     if [ ! -z "$MSYSTEM" ]; then
 	export PATH=${BUILDDIR}/lib:${BUILDDIR}/lib/.libs:$PATH
