--- a/glib/Makefile.am
+++ b/glib/Makefile.am
@@ -12,6 +12,9 @@ libgensioglib_la_LDFLAGS = -no-undefined -rpath $(libdir)
 
 EXTRA_DIST = libgensioglib.pc.in
 
+SUBDIRS = $(SWIG_DIR)
+DIST_SUBDIRS = swig
+
 # This variable must have 'exec' in its name, in order to be installed
 # by 'install-exec' target (instead of default 'install-data')
 pkgconfigexecdir = $(libdir)/pkgconfig
