glib: Fix issues compiling the library against the main swig library
The glib swig library needs some things from the main swig library.  But
it really doesn't work to link against another module, libtool
complains.  So split those things out into their own normal library and
link against that in all the Python modules.

This required moving a lot of things around, but no real functional
changes.

Signed-off-by: Corey Minyard <cminyard@mvista.com>

--- a/glib/Makefile.am
+++ b/glib/Makefile.am
@@ -12,7 +12,7 @@ libgensioglib_la_LDFLAGS = -no-undefined -rpath $(libdir)
 
 EXTRA_DIST = libgensioglib.pc.in
 
-SUBDIRS = $(SWIG_DIR)
+SUBDIRS = . $(SWIG_DIR)
 DIST_SUBDIRS = swig
 
 # This variable must have 'exec' in its name, in order to be installed
