--- a/swig/python/Makefile.am
+++ b/swig/python/Makefile.am
@@ -8,6 +8,14 @@ AM_CFLAGS = $(PYTHON_CPPFLAGS) \
 pythonlibdir=$(PYTHON_INSTALL_LIB_DIR)
 pythonlib_LTLIBRARIES = _gensio.la
 
+lib_LTLIBRARIES = libgensio_python_swig.la
+
+libgensio_python_swig_la_SOURCES = gensio_python_swig.c
+libgensio_python_swig_la_CFLAGS = -DBULDING_DLL $(AM_CFLAGS)
+libgensio_python_swig_la_LDFLAGS = -no-undefined
+libgensio_python_swig_la_LIBADD = $(PYTHON_LIBS) \
+		$(top_builddir)/lib/libgensio.la
+
 noinst_HEADERS = gensio_python.h
 
 gensio_wrap.c gensio.py: $(top_srcdir)/swig/gensio.i \
@@ -20,7 +28,7 @@ EXTRA_DIST = gensio_python.i CMakeLists.txt
 
 nodist__gensio_la_SOURCES = gensio_wrap.c
 _gensio_la_LIBADD = $(top_builddir)/lib/libgensio.la $(OPENSSL_LIBS) \
-		$(PYTHON_LIBS)
+		$(PYTHON_LIBS) libgensio_python_swig.la
 _gensio_la_LDFLAGS = -module -avoid-version $(OPENSSL_LDFLAGS) -no-undefined
 
 clean-local:
