Finish up recent swig changes
Add cmake support, add a pkgconfig file for the new library.

Signed-off-by: Corey Minyard <cminyard@mvista.com>

--- a/configure.ac
+++ b/configure.ac
@@ -547,6 +547,7 @@ AC_OUTPUT([Makefile
 	tools/Makefile
 	swig/Makefile
 	swig/python/Makefile
+	swig/python/libgensio_python_swig.pc
 	man/Makefile
 	examples/Makefile
 	tests/runtest
