Move glib and swig include file to their proper locations
Don't put them in the main include directory, we don't want them
installed if their functionality isn't present.

Signed-off-by: Corey Minyard <cminyard@mvista.com>

--- a/configure.ac
+++ b/configure.ac
@@ -538,6 +538,8 @@ AC_OUTPUT([Makefile
 	lib/Makefile
 	glib/libgensioglib.pc
 	glib/Makefile
+	glib/include/Makefile
+	glib/include/gensio/Makefile
 	glib/swig/Makefile
 	glib/swig/python/Makefile
 	include/Makefile
@@ -546,6 +548,8 @@ AC_OUTPUT([Makefile
 	tests/Makefile
 	tools/Makefile
 	swig/Makefile
+	swig/include/Makefile
+	swig/include/gensio/Makefile
 	swig/python/Makefile
 	swig/python/libgensio_python_swig.pc
 	man/Makefile
