--- a/swig/Makefile.am
+++ b/swig/Makefile.am
@@ -1,5 +1,5 @@
 
 EXTRA_DIST = gensio.i CMakeLists.txt
 
-SUBDIRS = . $(PYTHON_DIR)
-DIST_SUBDIRS = python
+SUBDIRS = . $(PYTHON_DIR) include
+DIST_SUBDIRS = python include
