--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -4,6 +4,8 @@ enable_testing()
 add_executable(oomtest oomtest.c)
 target_link_libraries(oomtest gensio ${GLIB_LIB} ${GLIB_LDFLAGS})
 
+include_directories("${PROJECT_SOURCE_DIR}/glib/include")
+
 set (top_srcdir "${CMAKE_SOURCE_DIR}")
 set (top_builddir "${CMAKE_BINARY_DIR}")
 configure_file(runtest.in runtest @ONLY)
