--- a/swig/python/libgensio_python_swig.pc.in
+++ b/swig/python/libgensio_python_swig.pc.in
@@ -6,4 +6,4 @@ includedir=@includedir@
 Name: libpython_swig_handlers
 Description: A library to abstract stream I/O like serial port, TCP, telnet, UDP, SSL, IPMI SOL, etc. 
 Version: @VERSION@
-Libs: -L${libdir} -lgensio @LIBS@
+Libs: -L${libdir} -lpython_swig_handlers -lgensio @LIBS@
