tcl: Add TCL os funcs support
Signed-off-by: Corey Minyard <cminyard@mvista.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,6 +14,7 @@ include(CheckSymbolExists)
 include(CheckCSourceCompiles)
 include(GNUInstallDirs)
 include(FindPkgConfig)
+include(FindTCL)
 
 if (WIN32)
   # Suppress packing error warnings, as they are ubiquitous and don't matter.
@@ -54,6 +55,14 @@ if(ENABLE_GLIB)
   if(GLIB_FOUND)
     set(HAVE_GLIB ON)
     set(GLIB_LIB gensioglib)
+  endif()
+endif()
+
+option(ENABLE_TCL "Enable TCL support" UNIX)
+if(ENABLE_TCL)
+  if(TCL_FOUND)
+    set(HAVE_TCL ON)
+    set(TCL_LIB gensiotcl)
   endif()
 endif()
 
@@ -177,8 +186,11 @@ endif()
 configure_file(config.h.cmake config.h)
 
 add_subdirectory(lib)
-if(GLIB_FOUND)
+if(HAVE_GLIB)
   add_subdirectory(glib)
+endif()
+if(HAVE_TCL)
+  add_subdirectory(tcl)
 endif()
 add_subdirectory(include)
 add_subdirectory(tools)
