glib: Add some missing CMakeList.txt file to the distribution
Signed-off-by: Corey Minyard <cminyard@mvista.com>

--- a/glib/Makefile.am
+++ b/glib/Makefile.am
@@ -9,7 +9,7 @@ libgensioglib_la_LIBADD = $(top_builddir)/lib/libgensio.la @OPENSSL_LIBS@ \
 	@GLIB_LIBS@
 libgensioglib_la_LDFLAGS = -no-undefined -rpath $(libdir)
 
-EXTRA_DIST = libgensioglib.pc.in
+EXTRA_DIST = libgensioglib.pc.in CMakeLists.txt
 
 SUBDIRS = . $(SWIG_DIR) include
 DIST_SUBDIRS = swig include
