--- a/tcl/swig/python/CMakeLists.txt
+++ b/tcl/swig/python/CMakeLists.txt
@@ -8,7 +8,7 @@ set(SWIG_INCLUDE_DIRECTORIES TRUE)
 set(CMAKE_SWIG_FLAGS -I${CMAKE_CURRENT_SOURCE_DIR} ${SWIG_EXTRA_FLAGS})
 swig_add_library(_gensiotcl LANGUAGE python SOURCES ../gensiotcl.i)
 swig_link_libraries(_gensiotcl gensio)
-swig_link_libraries(_gensiotcl gensiotcl)
+swig_link_libraries(_gensiotcl gensiotcl ${TCL_LIBRARY} )
 
 execute_process(COMMAND ${PYTHON_EXECUTABLE} -c "from distutils.sysconfig import get_python_lib; print(get_python_lib())" OUTPUT_VARIABLE PYTHON_SITE_PACKAGES OUTPUT_STRIP_TRAILING_WHITESPACE)
 set(PYTHON_INSTALL_SITE_PACKAGES ${PYTHON_SITE_PACKAGES} CACHE FILEPATH
