os funcs: More cleanups and consistency changes
Make all the OS handler calls consistent in their API.

Add man pages for all the OS handlers.

Remove threads support from TCL.  It will never work with the currenet
TCL API.

Signed-off-by: Corey Minyard <cminyard@mvista.com>

--- a/glib/CMakeLists.txt
+++ b/glib/CMakeLists.txt
@@ -35,3 +35,6 @@ endif()
 configure_file(libgensioglib.pc.in libgensioglib.pc @ONLY)
 install(FILES ${CMAKE_CURRENT_BINARY_DIR}/libgensioglib.pc
         DESTINATION ${CMAKE_INSTALL_LIBDIR}/pkgconfig)
+
+install(FILES gensio_glib_funcs_alloc.3 DESTINATION
+        ${CMAKE_INSTALL_FULL_MANDIR}/man8)
