Fix cmake issues with TCL_LIBRARY
cmake didn't like things using TCL_LIBRARY when TCL was not present.

So create another variable to use for that.

Signed-off-by: Corey Minyard <cminyard@mvista.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -58,11 +58,13 @@ if(ENABLE_GLIB)
   endif()
 endif()
 
+set(TCL_LIBS )
 option(ENABLE_TCL "Enable TCL support" UNIX)
 if(ENABLE_TCL)
   if(TCL_FOUND)
     set(HAVE_TCL ON)
     set(TCL_LIB gensiotcl)
+    set(TCL_LIBS ${TCL_LIBRARY})
   endif()
 endif()
 
