--- a/tests/runtest.in
+++ b/tests/runtest.in
@@ -77,5 +77,10 @@ if ${PRINT_MODE}; then
     fi
     echo ${RUNPREFIX} ${TEST} $*
 else
-    exec ${RUNPREFIX} ${TEST} $*
+    # Run the test with each available OS handler
+    for i in default @TCL_DIR@ @GLIB_DIR@; do
+	echo "Testing with '$i'"
+	export GENSIO_TEST_OS_HANDLER=$i
+	${RUNPREFIX} ${TEST} $*
+    done
 fi
