--- a/swig/python/CMakeLists.txt
+++ b/swig/python/CMakeLists.txt
@@ -13,7 +13,8 @@ set_property(TARGET gensio_python_swig PROPERTY SOVERSION 0)
 
 install(TARGETS gensio_python_swig DESTINATION lib EXPORT gensio_python_swig)
 install(EXPORT gensio_python_swig FILE gensio_python_swig.cmake DESTINATION lib/cmake/gensio)
-set_target_properties(gensio_python_swig PROPERTIES COMPILE_FLAGS "-DBUILDING_DLL")
+set_target_properties(gensio_python_swig PROPERTIES COMPILE_FLAGS
+                      "-DBUILDING_GENSIO_DLL")
 if (WIN32)
   # Stick this in the directories so Windows can find it when running
   # gensiot and oomtest.  Probably not right, but works for now.
