--- a/swig/python/Makefile.am
+++ b/swig/python/Makefile.am
@@ -11,7 +11,7 @@ pythonlib_LTLIBRARIES = _gensio.la
 lib_LTLIBRARIES = libgensio_python_swig.la
 
 libgensio_python_swig_la_SOURCES = gensio_python_swig.c
-libgensio_python_swig_la_CFLAGS = -DBUILDING_DLL $(AM_CFLAGS)
+libgensio_python_swig_la_CFLAGS = -DBUILDING_GENSIO_DLL $(AM_CFLAGS)
 libgensio_python_swig_la_LDFLAGS = -no-undefined
 libgensio_python_swig_la_LIBADD = $(PYTHON_LIBS) \
 		$(top_builddir)/lib/libgensio.la
