--- a/c++/Makefile.am
+++ b/c++/Makefile.am
@@ -7,4 +7,11 @@ libgensiocpp_la_SOURCES = gensio.cc
 libgensiocpp_la_LIBADD = $(top_builddir)/lib/libgensio.la @OPENSSL_LIBS@
 libgensiocpp_la_LDFLAGS = -no-undefined -rpath $(libdir)
 
+EXTRA_DIST = libgensiocpp.pc.in
+
+# This variable must have 'exec' in its name, in order to be installed
+# by 'install-exec' target (instead of default 'install-data')
+pkgconfigexecdir = $(libdir)/pkgconfig
+pkgconfigexec_DATA = libgensiocpp.pc
+
 SUBDIRS = include . tests examples
