c++: Add missed configure line for libgensiocpp.pc
Signed-off-by: Corey Minyard <cminyard@mvista.com>

--- a/configure.ac
+++ b/configure.ac
@@ -612,6 +612,7 @@ AC_OUTPUT([Makefile
 	c++/include/gensio/Makefile
 	c++/tests/Makefile
 	c++/examples/Makefile
+	c++/libgensiocpp.pc
 	glib/libgensioglib.pc
 	glib/Makefile
 	glib/include/Makefile
